--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">  IT specialist , Apps Developer , Data Analyst , Web Developer , Graphic Designer  </div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1c5QjHsdtc7IaDre9GWMjv08vA4vOAMnf/view?usp=sharing" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
